CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT( ArmorDetector )

SET( CMAKE_BUILD_TYPE "Debug" )
SET( CMAKE_CXX_COMPLIER "g++" )
SET( CMAKE_CXX_FLAGS "-std=c++11 -march=native -O3")

SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin )
SET( LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib )

LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules )

FIND_PACKAGE( OpenCV 3.2 REQUIRED )

INCLUDE_DIRECTORIES( ${OPENCV_INCLUDE_DIRS}
		     ${PROJECT_SOURCE_DIR}/include )

SET ( THIRD_PARITY_LIBS
	${OpenCV_LIBRARIES}	
	)

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( test )

